# relaxase

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  decoded_output.txt  example.txt  relaxase
include/: dna_block.hpp  dna_coder.hpp  dna_decoder.hpp  dna_encoder.hpp  dna_library.hpp  dna_patch.hpp  dna_pool.hpp  dna_sector.hpp  dna_strand.hpp  dna_superblock.hpp  dna_test.hpp  linux_util.hpp  relaxase.hpp  relaxase_client.hpp  relaxase_configuration.hpp
lib/schifra_dir/: CMakeLists.txt  Makefile  cmake_install.cmake
reed-solomon-master-prefix/src/reed-solomon-master-stamp/: reed-solomon-master-gitinfo.txt
reed-solomon-master-prefix/tmp/: reed-solomon-master-cfgcmd.txt  reed-solomon-master-gitclone.cmake  reed-solomon-master-gitupdate.cmake
schifra/src/: schifra.tgz
schifra/src/schifra/: schifra_reed_solomon_example04.cpp
schifra/src/schifra-stamp/: download-schifra.cmake  extract-schifra.cmake  schifra-urlinfo.txt
src/: dna_block.cpp  dna_coder.cpp  dna_decoder.cpp  dna_encoder.cpp  dna_library.cpp  dna_patch.cpp  dna_pool.cpp  dna_sector.cpp  dna_strand.cpp  dna_superblock.cpp  dna_test.cpp  main.cpp  relaxase.cpp  relaxase_client.cpp  relaxase_configuration.cpp
